# sensitive-strings

./: LICENSE.md  LICENSE.txt  README.md
erlang/: README.md  rebar.config
erlang/src/: sensitive_string.app.src  sensitive_string.erl
golang/: LICENSE.MIT  Makefile  README.md  go.mod  munge-coverage.sh  sensitivestring.go  sensitivestring_test.go
golang/cli/: SensitiveString.go
golang/ss/: Makefile  decolor.sh  go.mod  sensitivestring.go  sensitivestring_test.go
golang/ss/cli/: SensitiveString.go
golang/ss/consts/: consts.go
php/: .gitignore  README.md  STATUS.md  composer.json  phpunit.xml  test_simple.php
php/examples/: basic.php
php/src/: SensitiveString.php
php/tests/: SensitiveStringTest.php
python/: README.md  sensitive_string.py  test_sensitive_string.py
ruby/: .gitignore  Gemfile  README.md  test_simple.rb
ruby/lib/: sensitive_string.rb
ruby/spec/: sensitive_string_spec.rb  spec_helper.rb
rust/: .gitignore  Cargo.toml  README.md  TESTING.md
rust/examples/: basic.rs  serialization.rs
rust/src/: lib.rs
swift/: .gitignore  Package.swift  README.md  STATUS.md  TESTING.md
swift/Examples/: SimpleTest.swift
swift/Sources/SensitiveString/: SensitiveString.swift
swift/Tests/SensitiveStringTests/: SensitiveStringTests.swift
tcl/: README.md  sensitive_string.tcl  test_sensitive_string.tcl
typescript/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
typescript/src/: SensitiveString.test.ts  SensitiveString.ts
zig/: README.md  STATUS.md  build.zig
zig/examples/: README.md  basic.zig
zig/src/: sensitive_string.zig
(+5 files in other folders)
