[package]
name = "sensitive-string"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
license = "MIT"
description = "A wrapper for sensitive string values that prevents accidental exposure"
repository = "https://github.com/earlye/sensitive-strings"
keywords = ["security", "secrets", "password", "logging"]
categories = ["authentication", "development-tools::debugging"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

[features]
default = ["serde"]
serde = ["dep:serde"]

